grafana/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-basic-auth
spec:
  basicAuth:
    secret: grafana-credentials
    removeHeader: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-rate-limit
spec:
  rateLimit:
    average: 5
    burst: 15
    period: 1s
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-inflight
spec:
  inFlightReq:
    amount: 20
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-protection
spec:
  chain:
    middlewares:
      - name: grafana-rate-limit
      - name: grafana-inflight
      - name: grafana-basic-auth
